[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD/HUD_HP.gd" type="Script" id=1]
[ext_resource path="res://HUD/hp_under.png" type="Texture" id=2]
[ext_resource path="res://HUD/hp_bar.png" type="Texture" id=3]
[ext_resource path="res://assets/pixel_heart.png" type="Texture" id=4]
[ext_resource path="res://assets/pixel_heart_broke.png" type="Texture" id=5]

[node name="HUD_HP" type="TextureProgress"]
margin_left = 360.0
margin_top = 440.0
margin_right = 400.0
margin_bottom = 1000.0
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
fill_mode = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Life1" type="Node2D" parent="."]
position = Vector2( -23, 23 )

[node name="PixelHeart" type="Sprite" parent="Life1"]
scale = Vector2( 0.05, 0.05 )
z_index = 2
texture = ExtResource( 4 )

[node name="PixelHeartBroke" type="Sprite" parent="Life1"]
scale = Vector2( 0.05, 0.05 )
z_index = 1
texture = ExtResource( 5 )

[node name="Life2" type="Node2D" parent="."]
position = Vector2( -23, 70 )

[node name="PixelHeart" type="Sprite" parent="Life2"]
scale = Vector2( 0.05, 0.05 )
z_index = 2
texture = ExtResource( 4 )

[node name="PixelHeartBroke" type="Sprite" parent="Life2"]
scale = Vector2( 0.05, 0.05 )
z_index = 1
texture = ExtResource( 5 )

[node name="Life3" type="Node2D" parent="."]
position = Vector2( -23, 117 )

[node name="PixelHeart" type="Sprite" parent="Life3"]
scale = Vector2( 0.05, 0.05 )
z_index = 2
texture = ExtResource( 4 )

[node name="PixelHeartBroke" type="Sprite" parent="Life3"]
scale = Vector2( 0.05, 0.05 )
z_index = 1
texture = ExtResource( 5 )
